--- a/www/views/tabs/tabs.html
+++ b/www/views/tabs/tabs.html
@@ -16,12 +16,12 @@
 <ion-tabs class="tabs-icon-top tabs-color-positive ">
 
 
-  <ion-tab title="产品" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tabs.dashboard">
+  <ion-tab title="首页" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tabs.dashboard">
     <ion-nav-view name="dashboard-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="我的订单" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="orderCluster">
-    <ion-nav-view name="price-tab"></ion-nav-view>
+  <ion-tab title="服务中订单" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" ui-sref="tabs.my">
+    <ion-nav-view name="my-tab"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="我" icon-off="ion-ios-person-outline" icon-on="ion-ios-person" ui-sref="tabs.my">
